--- a/client/style.css
+++ b/client/style.css
@@ -10,3 +10,19 @@ body {
 canvas {
   background-image: url("assets/paper3.jpg");
 }
+
+#UI {
+	/*background-color: rgba(100, 100, 100, 0.5);*/
+	display: grid;
+	grid-template-columns: 1fr 150px 1fr;
+	grid-template-rows: 1fr 1fr 1fr 100px 50px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+}
+
+.readyBtn {
+	grid-column: 2;
+	grid-row: 4;
+}
