--- a/client/style.css
+++ b/client/style.css
@@ -14,8 +14,8 @@ canvas {
 #UI {
 	/*background-color: rgba(100, 100, 100, 0.5);*/
 	display: grid;
-	grid-template-columns: 1fr 150px 1fr;
-	grid-template-rows: 1fr 1fr 1fr 100px 50px;
+	grid-template-columns: 1fr 18% 150px 18% 1fr;
+	grid-template-rows: 40px 1fr 1fr 1fr 100px 100px 50px;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -23,6 +23,27 @@ canvas {
 }
 
 .readyBtn {
-	grid-column: 2;
-	grid-row: 4;
+	grid-column: 3;
+	grid-row: 6;
+}
+
+.centerModal {
+	grid-column: 2 / 5;
+	grid-row: 2 / 5;
+	background-color: gray;
+	border-radius: 20px;
+}
+
+.civList {
+	list-style-type: none;
+	padding: 40px;
+}
+
+.civItem {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	margin-bottom: 10px;
+	border-radius: 10px;
+	height: 50px;
 }
